JSW Devsb/src/objects/Marketing_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Marketing_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BP_Max__c</fullName>
        <label>BP Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Min__c</fullName>
        <label>BP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Marketing_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branding_Activities__c</fullName>
        <label>Branding Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Partner</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipName>Market_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current Average Monthly Volume in MT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencer</label>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipName>Market_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice Price Per Bag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Marketing_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Information</label>
        <referenceTo>Market_Information__c</referenceTo>
        <relationshipName>Market_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Schemes Running</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSP_Max__c</fullName>
        <label>RSP Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSP_Min__c</fullName>
        <label>RSP Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSP__c</fullName>
        <label>RSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sites</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipName>Market_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Available2__c</fullName>
        <label>Stock Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipName>Market_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipName>Marketing_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipName>Market_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WSP_Max__c</fullName>
        <label>WSP Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSP_Min__c</fullName>
        <label>WSP Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSP__c</fullName>
        <label>WSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Reading</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>RSP_Min__c</columns>
        <columns>BP_Max__c</columns>
        <columns>BP_Min__c</columns>
        <columns>RSP_Max__c</columns>
        <columns>WSP__c</columns>
        <columns>WSP_Max__c</columns>
        <columns>Current__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>notEqual</operation>
            <value>JSW</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Marketing Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Reading</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>